--- a/body.tex
+++ b/body.tex
@@ -769,7 +769,7 @@ Residual (post-mitigation) cost exposure for each risk is computed by taking the
 The total cost exposure is then the sum, over all risks in the register, of these products.
 
 Currently, the total cost exposure, and hence the needed level of contingency reserve, is approximately 15\% of the total annual operating budget at each operations partner.
-Included in the risk register is the risk of federal funding allocations being reduced, with a likely cost (if realized in any given year) of some $1.5M per operations partner.
+Included in the risk register is the risk of federal funding allocations being reduced, with a likely cost (if realized in any given year) of some \$1.5M per operations partner.
 (At SLAC, for example, this would cover about 7\% of the operating expense -- enough to pay the labor bills during a 1 month funding allocation delay.)
 
 Reserve maintenance is accounted for in our federal budget requests, either as an explicit difference between cost and budget on the DOE side, or as line by line allowances for increases in cost on the NSF side.
