--- a/planning-tools.tex
+++ b/planning-tools.tex
@@ -10,7 +10,7 @@ The schedule itself is defined as a set of JIRA milestones, while work is planne
 
 The Rubin planning tools are as follows:
 
-\begin(itemize}
+\begin{itemize}
 
 \item The \textbf{Data Preview and Release Planning Tool (DPRPT) workbook} supports the derivation of Rubin's primary set of major milestones, the LSST data releases.
 It also captures the high level planning of the data release contents, a critical activity during the pre-operations phases ``Data Previews.''
@@ -28,7 +28,7 @@ The CC's costing is therefore approximate: we estimate that it forecasts with be
 
 \end{itemize}
 
-Each tool is internally documented with a README and a Change Record, and cell comments are used for discussion of changes at that level. 
+Each tool is internally documented with a README and a Change Record, and cell comments are used for discussion of changes at that level.
 
 \subsection{Updating and Versioning}
 
