Missing \end{itemize}

--- a/planning-tools.tex
+++ b/planning-tools.tex
@@ -36,5 +36,5 @@ These planning tools are being evolved continuously.
 A major update of the Staffing Plan, WBS, and Cost Calculator is carried out following each sandboxing exercise.
 Because they are all interconnected, they carry the same version number.
 Ideally, the joint operations review happens just before such an update is begun; a natural time to archive the current version and advance to the new version is when the plan is frozen for joint agency review.
-Mechanically, a copy of each workbook is made, with ``ARCHIVED'' at the end of its name, the connections are edited so that the archived Staffing PLan and CC workbooks import from the corresponding archived copy of the WBS and not the current version, and then all 3 archived copies are transferred to an Attic folder.
+Mechanically, a copy of each workbook is made, with ``ARCHIVED'' at the end of its name, the connections are edited so that the archived Staffing Plan and CC workbooks import from the corresponding archived copy of the WBS and not the current version, and then all 3 archived copies are transferred to an Attic folder.
 The current versions are then renamed with the new version number, and edited until it is time to freeze them again.
