Fix % symbol typo

--- a/body.tex
+++ b/body.tex
@@ -761,7 +761,7 @@ Standard terminology for financial reserves is that ``management reserve'' descr
 Rubin Operations' two funding agencies offer differing guidelines on how reserve should be managed.
 DOE allows reserves to be built up and carried forward at SLAC, and used as both contingency and management reserve.
 DOE HEP holds additional reserves centrally, which can also be used as both contingency and management reserve.
-NSF AST allows line item budget over-estimation by up to 10%, to allow for increases in cost.
+NSF AST allows line item budget over-estimation by up to 10\%, to allow for increases in cost.
 These generate carry-forward (along with any other under-spending that may occur), which we use as contingency reserve.
 NSF also holds reserves of both kinds centrally, to cover high cost impact realized risks as well as unexpected events.
 
