Addressing Bob's PR comments

--- a/body.tex
+++ b/body.tex
@@ -5,8 +5,9 @@ This document provides a guide to the \VRO\ approach to work management and annu
 See the operations proposal RDO-018 for a description of the full scope and high level goals of the program.
 There is no formal \gls{EVMS} required from the funding Agencies (the National Science Foundation (NSF) and the Department of Energy (DOE) Office of Science) so activities are planned in detail on a semi-annual basis and effort towards that schedule of activities is tracked through an agile process.
 
-The annual planning process starts by setting high level milestones for the year, which are centered around releasing data to the public and major maintenance to the telescope system once we enter the phase of full survey operations.
-In a six-month cycle, the Leadership Team builds a series of milestone activities that are discrete pieces of work within Departments and Teams to collectively deliver the high level milestones.
+The annual planning process starts by reviewing, revising, and adding major milestones to the next fiscal year plan.
+These are centered around releasing data to the public and major maintenance to the telescope system once we enter the phase of full survey operations, and its these major milestones that are tracked and reported on in the annual NOIRLab Program Operations Plan (POP) and SLAC Field Work Proposal (FWP).
+Then, on a six-month cycle, the Leadership Team builds a series of ``epic'' milestone activities that are discrete pieces of work within Departments and Teams to collectively deliver the high level milestones.
 Teams record their day to day work in \gls{JIRA} and overall progress is monitored automatically through Smartsheet and reported to the Agencies through our managing organizations.
 
 This framework allows the multidisciplinary Rubin teams to operate the facility and generate nightly data products while continuously improving efficiency of workflows,
@@ -721,16 +722,18 @@ In April, following several months collecting high level and external budget inf
 The major milestones and budget are inserted into the draft NOIRLab POP and SLAC FWP.
 (Only the budget for the coming fiscal year is required for the POP.)
 
-In May, the Departments and Teams hold a series of meetings to set their minor (remaining Level 2 and Level 3) milestones, and ``scrub'' their budgets in order to propose their spending plans (to the Director's Office) by the end of May.
+In May, the Departments and Teams hold a series of meetings to set their minor (remaining Level 2 and Level 3) milestones, and ``scrub'' their budgets, milestones, and risks, in order to propose their next-year spending plans (to the Director's Office) by the end of May.
 Each department is given a ``sandbox'' workbook to work up during this period.
 This sandbox is initialized with the department's labor and non-labor plans (that were used in setting the budget), the current staffing plan, the progress against milestones in the current fiscal year, and the major milestones for the coming fiscal year.
-They are then invited to work this sandbox up with analysis of recent performance, and any changes they want to propose for the next fiscal year, based on the minor milestones and associated activities they want to prioritize.
+They are then invited to ``scrub'' their plans, by working this sandbox up with analysis of recent performance, and any changes they want to propose for the next fiscal year, based on the minor milestones and associated activities they want to prioritize.
 They are also invited to scrub their part of the risk register, update their risk response plans in concert with their planned activities, and anticipate any requests beyond target they may need to make.
 
-Typically, each team works up its part of the sandbox mostly independently, and then presents it to the department's management team around mid-May in a sandbox pitch session.
+Typically, each team works on its part of the sandbox mostly independently, and then presents their scrubbed plan to the department's management team around mid-May in a ``pitch'' session.
 (A template slide deck for each team's pitch is provided by the Director's Office, to ensure that all aspects of the sandboxing exercise are addressed.)
-The teams then address the feedback they have been given by the management team, and then present their sandboxes to the other teams in the department and also the Directorate and Program Operations teams from the Director's Office at the sandbox workshop at the end of the month.
+The teams then address the feedback they have been given by the management team, and then they present their scrubbed plans to the other teams in the department, the Directorate and Program Operations teams from the Director's Office, and the teams in the other departments, at the sandbox workshop at the end of the month.
 This sandbox workshop at the end of May / beginning of June gives all the departments, including the Director's Office, a chance to review, and probe, the ground-up planning in each team.
+(In practice, only the four technical departments' management teams are likely to sit through the entire workshop, although it is organized inclusively so that anyone could choose to review all the scrubbed plans.)
+
 In most cases a team's proposed changes in effort distribution, staffing, and purchasing will either involve only small deviations from budget guidance, or stay within the ``box'' given to them.
 Teams may also coordinate their proposed changes so as to keep the department's overall spending plan within its budget.
 (This coordination may be facilitated by the department's management team, e.g.\ following the pitch sessions.)
@@ -741,7 +744,7 @@ This June period of post-sandbox spending plan development and cost calculation 
 The changes to the spending plan, once captured in the Rubin planning tools, are implemented in NOIRLab's and SLAC's lab-wide budget models in July.
 Statements of work for the next fiscal year's contracts and MPOs are straightforwardly derived from the scrubbed plans, for their July deadlines.
 
-The teams then plan work against their minor milestones in September, incorporating any community input they may have collected at the annual project and community workshop (PCW) in August.
+In September, the teams then plan work (for the first half of the new fiscal year) against their minor milestones, incorporating any community input they may have collected at the annual project and community workshop (PCW) in August.
 
 \begin{figure}[!ht]
 \includegraphics[width=0.95\linewidth]{figures/annual-budget-cycle.png}
@@ -763,24 +766,25 @@ DOE allows reserves to be built up and carried forward at SLAC, and used as both
 DOE HEP holds additional reserves centrally, which can also be used as both contingency and management reserve.
 NSF AST allows line item budget over-estimation by up to 10%, to allow for increases in cost.
 These generate carry-forward (along with any other under-spending that may occur), which we use as contingency reserve.
-NSF also holds reserves of both kinds centrally, to cover high cost impact realized risks as well as unexpected events.
+NSF holds management reserve centrally, to handle unexpected events.
 
 The cost impact analysis of the Rubin Operations risk register informs the level of contingency reserve needed.
 Residual (post-mitigation) cost exposure for each risk is computed by taking the  product of the residual probability of the risk being realized (in any given year) and the likely annual cost of addressing that risk.
 The total cost exposure is then the sum, over all risks in the register, of these products.
+While Rubin holds a number of potentially very costly risks, these are generally very unlikely to occur.
 
 Currently, the total cost exposure, and hence the needed level of contingency reserve, is approximately 15\% of the total annual operating budget at each operations partner.
 Included in the risk register is the risk of federal funding allocations being reduced, with a likely cost (if realized in any given year) of some \$1.5M per operations partner.
 (At SLAC, for example, this would cover about 7\% of the operating expense -- enough to pay the labor bills during a 1 month funding allocation delay.)
 
 Reserve maintenance is accounted for in our federal budget requests, either as an explicit difference between cost and budget on the DOE side, or as line by line allowances for increases in cost on the NSF side.
-At both operations partners the reserve is maintained as carry-forward from one year's spending to the next, with it being spent down to zero either during the post-operations period (at SLAC), or at the end of each 5-year renewal period at NOIRLab.
+At both operations partners carry forward is maintained from one year's plan to the next, with it being spent down to zero either during the post-operations period (at SLAC), or before the end of each 5-year renewal period at NOIRLab.
+Each year a plan is described in the NOIRLab POP for how carry forward is allocated.
 (The restriction on carrying forward funds between renewal periods means that the level of reserve held at NOIRLab varies significantly over the course of the 5 years.
-Risks that are realized early in the 5-year period are more likely to need supplemental funding from MSF's centrally-held reserves than those that are realized later on, when the carry-forward has been built up.
+Risks that are realized early in the 5-year period are more likely to need supplemental funding from NSF's centrally-held reserves than those that are realized later on, when the carry-forward has been built up.
 It may be possible to purposefully hold back scope so as to build up the carry-forward quickly at the start of a renewal period.)
 
-Requests beyond target (RBTs) are typically made by the departments in order to address risks as they are realized.
-(They may also be made in order to take advantage of opportunities arising.)
+Requests beyond target (RBTs) are typically made by the departments in order to address risks and/or opportunities as they are realized.
 An RBT, if approved, leads to a draw on the reserve held at one of the operations partners.
 (At NOIRLab, carry-forward use must be declared a year in advance in the POP: this is why the sandboxing process includes a request that the operations teams pitch RBTs for the coming year at that stage.)
 The RBT itself is a Jira ticket submitted by a department's management team on behalf of the team that is addressing the risk.
