Active voice in scrubbing/sandboxing description

--- a/body.tex
+++ b/body.tex
@@ -718,18 +718,18 @@ It also describes our approach to risk-aware budgeting, and a process for review
 
 Figure~\ref{fig:annual-cycle} illustrates the phases of \gls{Rubin Operations} budget development and spending planning throughout the year, as laid out in Section~\ref{sec:annual-planning-timeline}.
 In April, following several months collecting high level and external budget information and implementing changes requested during the previous summer, the \gls{Director}'s Office sets major (Level 1 and some Level 2) milestones, and issues departmental budget guidance for the next two fiscal years.
-(Ideally, the Joint agency \gls{Operations} status \gls{Review} (\gls{JOR}) would be held in early April, to provide external expert oversight of the plan.)
+(Ideally, the \gls{JOR} would be held in early April, to provide external expert oversight of the plan.)
 The major milestones and budget are inserted into the draft \gls{NOIRLab} \gls{POP} and \gls{SLAC} FWP.
 (Only the budget for the coming fiscal year is required for the \gls{POP}.)
 
 In May, the Departments and Teams hold a series of meetings to set their minor (remaining Level 2 and Level 3) milestones, and ``scrub'' their budgets, milestones, and risks, in order to propose their next-year spending plans (to the \gls{Director}'s Office) by the end of May.
-Each department is given a ``sandbox'' workbook to work up during this period.
-This sandbox is initialized with the department's labor and non-labor plans (that were used in setting the budget), the current staffing plan, the progress against milestones in the current fiscal year, and the major milestones for the coming fiscal year.
-They are then invited to ``scrub'' their plans, by working this sandbox up with analysis of recent performance, and any changes they want to propose for the next fiscal year, based on the minor milestones and associated activities they want to prioritize.
-They are also invited to scrub their part of the risk register, update their risk response plans in concert with their planned activities, and anticipate any requests beyond target they may need to make.
+We provide each department with a ``sandbox'' workbook to work up during this period.
+We initialize this sandbox with the department's labor and non-labor plans (that were used in setting the budget), the current staffing plan, the progress against milestones in the current fiscal year, and the major milestones for the coming fiscal year.
+We then invite them to ``scrub'' their plans, by working this sandbox up with analysis of recent performance, and any changes they want to propose for the next fiscal year, based on the minor milestones and associated activities they want to prioritize.
+We also invite them to scrub their part of the risk register, update their risk response plans in concert with their planned activities, and anticipate any requests beyond target they may need to make.
 
 Typically, each team works on its part of the sandbox mostly independently, and then presents their scrubbed plan to the department's management team around mid-May in a ``pitch'' session.
-(A template slide deck for each team's pitch is provided by the \gls{Director}'s Office, to ensure that all aspects of the sandboxing exercise are addressed.)
+(We provide a template slide deck for each team's pitch, to ensure that all aspects of the sandboxing/scrubbing exercise are addressed.)
 The teams then address the feedback they have been given by the management team, and then they present their scrubbed plans to the other teams in the department, the Directorate and Program \gls{Operations} teams from the \gls{Director}'s Office, and the teams in the other departments, at the sandbox workshop at the end of the month.
 This sandbox workshop at the end of May / beginning of June gives all the departments, including the \gls{Director}'s Office, a chance to review, and probe, the ground-up planning in each team.
 (In practice, only the four technical departments' management teams are likely to sit through the entire workshop, although it is organized inclusively so that anyone could choose to review all the scrubbed plans.)
@@ -739,9 +739,9 @@ Teams may also coordinate their proposed changes so as to keep the department's 
 (This coordination may be facilitated by the department's management team, e.g.\ following the pitch sessions.)
 
 Following the Sandbox Workshop, the \gls{Director}'s Office adjusts and finalizes the overall spending plan by the end of June, in time for the submission of the NOIRLab \gls{POP}, and \gls{SLAC}'s DOE budget briefing.
-This June period of post-sandbox spending plan development and cost calculation involves the Directors Office staff making updates to the planning tools (Appendix~\ref{sec:planning-tools}), with review by teh departmental management teams.
+This June period of post-sandbox spending plan development and cost calculation involves the Directors Office staff making updates to the planning tools (Appendix~\ref{sec:planning-tools}), with review by the departmental management teams.
 
-The changes to the spending plan, once captured in the Rubin planning tools, are implemented in \gls{NOIRLab}'s and \gls{SLAC}'s lab-wide budget models in July.
+We implement the changes to the spending plan, once captured in the Rubin planning tools, in \gls{NOIRLab}'s and \gls{SLAC}'s lab-wide budget models in July.
 Statements of work for the next fiscal year's contracts and MPOs are straightforwardly derived from the scrubbed plans, for their July deadlines.
 
 In September, the teams then plan work (for the first half of the new fiscal year) against their minor milestones, incorporating any community input they may have collected at the annual project and community workshop (\gls{PCW}) in August.
