Correct pluralization of RBT

--- a/body.tex
+++ b/body.tex
@@ -784,8 +784,8 @@ Each year a plan is described in the \gls{NOIRLab} \gls{POP} for how carry forwa
 Risks that are realized early in the 5-year period are more likely to need supplemental funding from \gls{NSF}'s centrally-held reserves than those that are realized later on, when the carry-forward has been built up.
 It may be possible to purposefully hold back scope so as to build up the carry-forward quickly at the start of a renewal period.)
 
-Requests beyond target (RBTs) are typically made by the departments in order to address risks and/or opportunities as they are realized.
-An \gls{RBT}, if approved, leads to a draw on the reserve held at one of the operations partners.
+An \gls{RBT} is typically made by a department in order to address risks and/or opportunities as they are realized.
+If approved, the \gls{RBT} leads to a draw on the reserve held at one of the operations partners.
 (At \gls{NOIRLab}, carry-forward use must be declared a year in advance in the \gls{POP}: this is why the sandboxing process includes a request that the operations teams pitch RBTs for the coming year at that stage.)
 The \gls{RBT} itself is a Jira ticket submitted by a department's management team on behalf of the team that is addressing the risk.
 Review is by the Directorate team, as budget holders.
