--- a/body.tex
+++ b/body.tex
@@ -6,7 +6,7 @@ See the operations proposal \gls{RDO}-018 for a description of the full scope an
 There is no formal \gls{EVMS} required from the funding Agencies (the \gls{National Science Foundation} (\gls{NSF}) and the \gls{Department of Energy} (DOE) Office of Science) so activities are planned in detail on a semi-annual basis and effort towards that schedule of activities is tracked through an agile process.
 
 The annual planning process starts by reviewing, revising, and adding major milestones to the next fiscal year plan.
-These are centered around releasing data to the public and major maintenance to the telescope system once we enter the phase of full survey operations, and its these major milestones that are tracked and reported on in the annual \gls{NOIRLab} Program Operations Plan (\gls{POP}) and \gls{SLAC} Field Work Proposal (FWP).
+These are centered around releasing data to the public and major maintenance to the telescope system once we enter the phase of full survey operations, and it's these major milestones that are tracked and reported on in the annual \gls{NOIRLab} Program Operations Plan (\gls{POP}) and \gls{SLAC} Field Work Proposal (FWP).
 Then, on a six-month \gls{cycle}, the Leadership Team builds a series of ``epic'' milestone activities that are discrete pieces of work within Departments and Teams to collectively deliver the high level milestones.
 Teams record their day to day work in \gls{JIRA} and overall progress is monitored automatically through Smartsheet and reported to the Agencies through our managing organizations.
 
@@ -48,7 +48,7 @@ For \gls{SLAC}, the \gls{POP} informs \gls{SLAC}'s annual planning, which culmin
 
 The \gls{FWP} is delivered in June of the current fiscal year, and covers the federal budget request for the next two fiscal years.
 The \gls{FWP} is previewed to \gls{SLAC} management and \gls{DOE} in February in advance of the final delivery in June.
-Because the \gls{POP} for NSF lags the FWP for DOE by one year, and their submission dates differ by several months, Rubin does high level planning in early \gls{Q2} of the financial year (January and February) and plans 2 years ahead, as required for the \gls{SLAC} FWP.
+Because the \gls{POP} for NSF lags the FWP for DOE by one year, and their submission dates differ by several months, Rubin does high level planning in early \gls{Q2} of the fiscal year (January and February) and plans 2 years ahead, as required for the \gls{SLAC} FWP.
 Detailed activity planning, including defining smaller chunks of work as lower level milestones, continues though the year in advance of the next year.
 This detailed activity planning is the subject of this document.
 
@@ -376,7 +376,7 @@ Example: \textit{``V5 \gls{WBS} workbook and Preliminary Cost Calculator impleme
   This date should be before or the same as the milestone's parent milestone's ``Milestone Due Date'' as shown in the Smartsheet, or the ``Due Date'' of the parent milestone in \gls{JIRA}.
 %\item The \texttt{Start Date} is the date when the work for the milestone should begin.
 %  This is the date that the Smartsheet will use in a visual comparison between the fraction of work completed and the fraction of time elapsed, to help track progress on the epics.
-\item In the \texttt{Linked Issues} field, create a \textit{``blocks''} link to the parent milestone to reflect how that milestone contributes to acheiving that milestone.
+\item In the \texttt{Linked Issues} field, create a \textit{``blocks''} link to the parent milestone to reflect how that milestone contributes to achieving that milestone.
 \end{itemize}
 
 The Program Coordinators will ensure that the milestones that have been defined are correctly arranged in the Smartsheet, so that their epics appear nested beneath them.
@@ -418,7 +418,7 @@ Each \gls{epic} loaded into the plan must have this minimum set of fields filled
 \item A concrete, well defined deliverable \emph{or} be clearly described as a ``bucket'' or ``emergent work'' (\S\ref{sec:bucket});
 \item The \texttt{Component} field set to the appropriate Department;
 \item The \texttt{Story Points} field set to a (non-zero) estimate of the effort required to complete the \gls{epic} in terms of \glspl{SP} (see \S\ref{sec:effort}).
-\item In the \texttt{Linked Issues} field, create a \textit{``blocks''} link to the parent milestone to reflect how that milestone contributes to acheiving that milestone.
+\item In the \texttt{Linked Issues} field, create a \textit{``blocks''} link to the parent milestone to reflect how that milestone contributes to achieving that milestone.
 \item The \texttt{Due Date} field set to the appropriate date, which does not exceed the due date of the milestone it is labeled to achieve.
 \item The \texttt{label} field is set to identify the fiscal year during which the work will be done. Examples are \gls{FY23} or \gls{FY24}.
 
