--- a/body.tex
+++ b/body.tex
@@ -171,8 +171,7 @@ Staff in ``scientist'' or ``engineer'' roles can allocate up to 2\% of their tim
 % Perhaps we just roll it all up into 5%, but it's a good place to reiterate that staff *are expected* to spend time on DEI
 
 Staff in ``scientist'' roles are expected to spend 20\% of their time on personal research (see the \gls{Rubin Operations} Plan for details).
-That is, scientists are expected to devote 1,440 hours per
-year to operations activity, and the remainder of their time to personal research.
+That is, scientists are expected to devote 1,440 hours per year to operations activity, and the remainder of their time to personal research.
 % Some scientists are 50%
 
 % Confirmation on how we will be having staff charge for ES/RSS budgeted time in FY22 will be needed.  One suggestion is to not worry about this until FY23 when staff are contributing more than 50% of their time to NOIRLab.
@@ -182,8 +181,7 @@ Functional Managers will ensure the proper project codes are available on your t
 
 Rubin expects to pay the full rate for any scientist or engineer who contributes full-time or fractionally to operations.
 This is handled through indirect rates at \gls{NOIRLab} and direct charges to research accounts at \gls{SLAC}.
-Science time is included in the subcontracts of our partners at affiliated institutions through indirect charges
-similar to the case for \gls{NOIRLab}.
+Science time is included in the subcontracts of our partners at affiliated institutions through indirect charges similar to the case for \gls{NOIRLab}.
 
 In Data Production, the base assumption is that 30\% of an individual's \RO operations time (i.e. 540 hours/year for a full-time developer, 432 hours/year for a full-time scientist) are devoted to
 overhead for regular meetings\footnote{``Meetings'' include, for example, scheduled weekly team meetings, stand-ups, etc;
@@ -212,6 +210,21 @@ Full-time Scientist & 1440     &  84            & 21.00 \\
 \caption{Expected working rates for developers and scientists. Technicians and engineers follow the same rates as developers.}
 \label{tab:working-rate}
 \end{table}
+
+\subsection{Science Time}
+Science time refers to the portion of time that is allocated to staff employed in  {\emph scientist}  roles to carry out independent scientific research activities.  
+Science time is is not applicable to  technical roles. 
+Leadership roles may or may not include science time. 
+
+Rubin scientists are employed in either a 50-50 role, where their time is equally split between Rubin and research activities or in an 80-20 role, where Rubin activities form the majority of their work  with 20\% of time available for personal research. 
+Irrespective of the amount of science time allocated, all NOIRLab staff will charge the portion of their time spent on research to a science time account and will be assessed on their scientific achievements. 
+
+During construction, staff in science roles were entitled, but not required, to spend up to 20\% of their time on research, at their discretion. 
+Science time activities in construction were not formally assessed. 
+Uptake was varied with some staff maintaining an active  research profile whereas others preferred to focus all their time on Rubin construction. 
+Encouraging and supporting Rubin scientists to carry out research in addition to their Rubin activities is a key element in developing Rubin scientists and the betterment of Rubin. 
+We plan to consult with Rubin scientists to develop a strategy  that enables scientists to effectively make use of their allocated science time.
+This may include formally defining projects and tracking progress using project tools. 
 
 \subsection{Special Cases}
 
