add authority and responsibility

--- a/body.tex
+++ b/body.tex
@@ -35,8 +35,16 @@ They assist in developing the annual Program Operating Plan (\gls{POP}), trackin
 
 On the \gls{SLAC} side, Christine Soldahl is the \gls{Business Manager} who handles similar tasks.
 
-Rubin Operations has four operational Departments in addition to the RDO (Rubin Director’s Office): \gls{ROO} (Rubin Observatory Operations), \gls{RDP} (Rubin Data Production), \gls{RPF} (Rubin System Performance), and REO (Rubin Education and Public Outreach).
-Each operational Department is led by an Associate \gls{Director} (\gls{AD}).
+Rubin Operations has three operational Departments and one Program in addition to the Director’s Office: RDO (Rubin Director’s Office), ROO (Rubin Observatory Operations), RDP (Rubin Data Production), RPF (Rubin System Performance), and REO (Rubin Education and Public Outreach; a Program within Rubin). Each operational Department is led by an Associate Director; REO is led by a Head of Program).
+
+\subsection{Responsibility and Authority}
+The ADs and Head of EPO are given broad authority to organize, manage, and staff their areas within an overall budget and operations plan (RDO-018) managed by the RDO. Annual budgets and plans are developed through a scrub process led by the Program Operations team of the RDO. This process informs NSF and DOE side budgets and plans for the upcomming fiscal year. Budgets and plans are captured in the NOIRLab Program Operations Plan (POP) and the SLAC Field Work Proposal (FWP) submitted to NSF and DOE, respectively.
+
+The ADs and Head of EPO are delegated the responsiblity for detailed staffing plan, activities, and major milestones to be delivered in their respective areas as well as other aspects of the plan as assigned by the RDO. Staffing roles that are vacant is the direct responsibility of the ADs and Head of EPO (or their delagtes). Changes to existing roles or promotions/new roles must be approved by the Director or their delegate (usually the Deputy Director). Recruitments are to be initiated by the ADs and Head of EPO (or their delegate) and coordinated with the Program Opetations team. Program Operations will work with NOIRLab to complete the recruitment once approved by the Director.
+
+Spending decisions are ultimately held with the Director. Spending auhority at SLAC is held by the Deputy Director. Each AD at NOIRLab and the Head of EPO have budget authority up to a Lab specificed amount in order to approve requisitions and purchases. Spending authroirty to team leads both at SLAC and NOIRLab are at the discretion of the Deputy Director and the ADs and Head of EPO. Spending levels will be at the lab specificed level. ADs, teh Head of EPO, and team leads should approve all purchases and requisitions (including travel) within their limit according to the current fiscal year plan. Unplanned purchases and requisitions less than 10\% of their budgets can be made without approval from the RDO as long as there are funds available. Team leads not employed at SLAC or NOIRLab will be able to make staffing and budgeting decisions as delegated to them by their AD or the Head of EPO but may need a surrogate to process and approve actual requisitions.
+
+The NOIRLab budget and signature authority processes and limits are provided in this document: NOIR-01-PMO-GDL-00002 which is available upon request to the Rubin Head of Program Operations.
 
 \subsection{Annual Reporting}
 \label{sec:reporting}
