Removed references to DEI

--- a/body.tex
+++ b/body.tex
@@ -174,9 +174,8 @@ The \gls{Rubin Operations} partners, \gls{SLAC} and \gls{NOIRLab}, may have diff
 
 In general, staff in \gls{Rubin Operations} roles at a given expected full-time equivalent (\gls{FTE}) effort level are expected to devote that fraction of their total work time to \RO.
 
-Staff in ``scientist'' or ``engineer'' roles can allocate up to 2\% of their time to training, 2\% to administrative activities and 1\% to outreach and \gls{DEI} activities.
-% I have heard it said that staff has up to 3% for Outreach and DEI but I don't know how that resolves to the budget numbers described in the previous sentence
-% Perhaps we just roll it all up into 5%, but it's a good place to reiterate that staff *are expected* to spend time on DEI
+% Remove Feb 2025
+% Staff in ``scientist'' or ``engineer'' roles can allocate up to 2\% of their time to training, 2\% to administrative activities and 1\% to outreach and \gls{DEI} activities.
 
 Staff in ``scientist'' roles are expected to spend 20\% of their time on personal research (see the \gls{Rubin Operations} Plan for details).
 That is, scientists are expected to devote 1,440 hours per
@@ -184,8 +183,9 @@ year to operations activity, and the remainder of their time to personal researc
 % Some scientists are 50%
 
 % Confirmation on how we will be having staff charge for ES/RSS budgeted time in FY22 will be needed.  One suggestion is to not worry about this until FY23 when staff are contributing more than 50% of their time to NOIRLab.
+% Removed DEI time
 Personal research time is charged to a \gls{NOIRLab}'s Research and Science Services (\gls{RSS}) project code and is prorated for staff who are fractionally allocated to \gls{Rubin Operations}.
-Training, administrative, and outreach and \gls{DEI} time is charged to either RSS or \gls{ES} depending on where staff will move into \gls{NOIRLab} (RSS or \gls{ES}).
+Training, administrative, and outreach time is charged to either RSS or \gls{ES} depending on where staff will move into \gls{NOIRLab} (RSS or \gls{ES}).
 Functional Managers will ensure the proper project codes are available on your timecard.
 
 Rubin expects to pay the full rate for any scientist or engineer who contributes full-time or fractionally to operations.
