--- a/RTN-005.tex
+++ b/RTN-005.tex
@@ -43,6 +43,7 @@ The process for measuring progress towards an annually-planned schedule is descr
 \addtohist{1}{2021-11-05}{Initial version.}{William O'Mullane}
 \addtohist{1}{2023-02-17}{Extension to include budget planning, FY23 process updates.}{Phil Marshall \& Cathy Petry}
 \addtohist{1}{2024-01-04}{Added authority and responsibility, FY24 process updates.}{Bob Blum}
+\addtohist{1}{2025-02-17}{Removed referneces to DEI.}{Leanne Guy, Bob Blum}
 }
 
 
